[package]
name = "memdbg"
version = "2.0.0"
description = "MemDBG — PS4/PS5 memory debugger"
authors = ["MemDBG contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "memdbg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "sync", "io-util", "time"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
bytes = "1"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
